[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berth-mcp"
version = "0.2.1"
description = "Database access MCP server — inspect, query, and manage databases safely."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Seaynic Labs", email = "hello@seayniclabs.com" },
]
keywords = ["mcp", "database", "postgresql", "sqlite", "mysql", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]",
    "asyncpg",
    "aiosqlite",
]

[project.optional-dependencies]
mysql = ["asyncmy"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pip-audit",
]

[project.urls]
Homepage = "https://github.com/seayniclabs/berth"
Repository = "https://github.com/seayniclabs/berth"
Issues = "https://github.com/seayniclabs/berth/issues"

[project.scripts]
berth = "berth.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/berth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
